crates/top/re_sdk/tests/snapshots/lenses__scatter_columns.snap
---
source: crates/top/re_sdk/tests/lenses.rs
expression: "format!(\"{chunk:-240}\")"
---
┌────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│ METADATA:                                                                                                                              │
│ * entity_path: /scatter_test/exploded                                                                                                  │
│ * heap_size_bytes: [**REDACTED**]                                                                                                      │
│ * id: [**REDACTED**]                                                                                                                   │
│ * version: [**REDACTED**]                                                                                                              │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ ┌───────────────────────────────────────────────┬──────────────────────────┬────────────────────┬────────────────────────────────────┐ │
│ │ RowId                                         ┆ my_timestamp             ┆ tick               ┆ exploded_strings                   │ │
│ │ ---                                           ┆ ---                      ┆ ---                ┆ ---                                │ │
│ │ type: FixedSizeBinary[16]                     ┆ type: nullable i64       ┆ type: nullable i64 ┆ type: nullable List[nullable Utf8] │ │
│ │ ARROW:extension:metadata: {"namespace":"row"} ┆ index_name: my_timestamp ┆ index_name: tick   ┆ component: exploded_strings        │ │
│ │ ARROW:extension:name: TUID                    ┆ is_sorted: true          ┆ is_sorted: true    ┆ kind: data                         │ │
│ │ is_sorted: true                               ┆ kind: index              ┆ kind: index        ┆                                    │ │
│ │ kind: control                                 ┆                          ┆                    ┆                                    │ │
│ ╞═══════════════════════════════════════════════╪══════════════════════════╪════════════════════╪════════════════════════════════════╡ │
│ │ row_[**REDACTED**]                            ┆ 1                        ┆ 1                  ┆ [one]                              │ │
│ ├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤ │
│ │ row_[**REDACTED**]                            ┆ 2                        ┆ 1                  ┆ [two]                              │ │
│ ├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤ │
│ │ row_[**REDACTED**]                            ┆ 3                        ┆ 1                  ┆ [three]                            │ │
│ ├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤ │
│ │ row_[**REDACTED**]                            ┆ 4                        ┆ 2                  ┆ [four]                             │ │
│ ├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤ │
│ │ row_[**REDACTED**]                            ┆ 5                        ┆ 3                  ┆ null                               │ │
│ └───────────────────────────────────────────────┴──────────────────────────┴────────────────────┴────────────────────────────────────┘ │
└────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
